right mid module

--- a/backend/templates/article.html
+++ b/backend/templates/article.html
@@ -126,7 +126,7 @@
 </div>
 
 <div class="clearfix"></div> 
-{% extends 'footer.html' %}
+{% include 'footer.html' %}
 <!-- GETSATISFACTION -->
 <script type="text/javascript" charset="utf-8">
         var is_ssl = ("https:" == document.location.protocol);
