--- a/backend/templates/privacy_policy.html
+++ b/backend/templates/privacy_policy.html
@@ -51,7 +51,7 @@
 
             
             <div class="clearfix"></div> 
-	{% extends 'footer.html' %}
+	{% include 'footer.html' %}
         <!-- End container" -->
         </div>
 <!-- GETSATISFACTION -->
