--- a/backend/templates/user_info.html
+++ b/backend/templates/user_info.html
@@ -340,6 +340,6 @@
 		{% endif %}
 	</div>
 	<div class="clearfix"></div> 
-	{% extends 'footer.html' %}
+	{% include 'footer.html' %}
         </body>
 </html>
