--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -124,7 +124,7 @@
 </div>
 <br class="clear-both" />
 <div id="footer-container">
-	{% extends 'footer.html' %}
+	{% include 'footer.html' %}
 </div>
 <!-- GETSATISFACTION -->
 <script type="text/javascript" charset="utf-8">
