--- a/backend/css/landing_form.css
+++ b/backend/css/landing_form.css
@@ -3,7 +3,7 @@ body{
 }
 #header_container{background:transparent}
 #header{width:900px;margin:auto}
-#footer{background:transparent}
+/*#footer{background:transparent}*/
 #content{background:transparent}
 #content #inset #inset_shimmer .
 .slogan#easiest{width:786px;height:79px;background:url('/images/slogan_easiest.png?alpha') top left no-repeat transparent;text-indent:-9999px}
@@ -40,7 +40,7 @@ body{
 #import_form label .disclaimer{color:#9cacbc;font-family:"Lucida Grande",Verdana,sans-serif;font-size:11px}#content #form #form_inner 
 #import_form 
 #content #form #form_inner 
-#import_form .text_field:focus{background-color:#f9f8e4}ul.errors{margin:0 0 25px 0;padding:15px 15px 5px 15px;background:url('/images/form_error_bg.png') bottom left repeat-x #ef858d;font-family:Arial,Helvetica,Verdana,sans-serif;font-size:18px;font-weight:normal;color:#631110;border-top:1px solid #7d454a;border-left:1px solid #ce7076;border-right:1px solid #ce7076;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px}ul.errors li{margin:0 0 10px 0}#content .blue_note{position:relative;top:-50px}#footer{margin-top:-80px}
+#import_form .text_field:focus{background-color:#f9f8e4}ul.errors{margin:0 0 25px 0;padding:15px 15px 5px 15px;background:url('/images/form_error_bg.png') bottom left repeat-x #ef858d;font-family:Arial,Helvetica,Verdana,sans-serif;font-size:18px;font-weight:normal;color:#631110;border-top:1px solid #7d454a;border-left:1px solid #ce7076;border-right:1px solid #ce7076;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px}ul.errors li{margin:0 0 10px 0}#content .blue_note{position:relative;top:-50px}/*#footer{margin-top:-80px}*/
 .big_button {
     -moz-border-radius: 5px 5px 5px 5px;
     background: repeat-x scroll center top #87B500;
@@ -141,9 +141,9 @@ body{
 .clear-both{
 	clear: both;
 }
-#footer-container {
+/*#footer-container {
 	margin-top: 130px;
-}
+}*/
 .install_steps {
 	margin-top:30px;
 	margin-left:-80px;
