--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -957,7 +957,7 @@ span {
 	float: left;
 }
 .account_field_column_right {
-	margin-bottom: 20px;
+	margin-top: 35px;
 	float: right;
 	margin-right: 20px;
 }
@@ -1081,4 +1081,9 @@ span {
 }
 #footer .col ul li a:hover {
 	color: #8999C3;
+}
+#agree {
+	margin-left: 30px;
+	margin-bottom: -10px;
+	display: none;
 }
