--- a/backend/templates/user_info.html
+++ b/backend/templates/user_info.html
@@ -29,24 +29,53 @@
 		<script>
 			$(document).ready(function(){
 				var instaright_cookie = $.cookie("user_uuid");
+				var oauth_connect_link={};
+				oauth_connect_link["facebook"]='javascript:fblogin();'
+				oauth_connect_link["twitter"]='http://www.instaright.com/oauth/twitter/login'
+				oauth_connect_link["evernote"]='http://www.instaright.com/oauth/evernote/login'
+				oauth_connect_link["google"]='https://www.google.com/accounts/ServiceLogin?service=ah&passive=true&continue=https://appengine.google.com/_ah/conflogin%3Fcontinue%3Dhttp://www.instaright.com/&ltmpl=gm&shdf=CioLEgZhaG5hbWUaHkluc3RhcmlnaHQgU29jaWFsIEJvb2ttYXJrIGFwcAwSAmFoIhTE48qzG8DBDmHMiwb872gE6aMgLSgBMhSxq_6FfkBd9xImrOBLDCHK6sbOIg'
+				oauth_connect_link["picplz"]='http://www.instaright.com/oauth2/picplz/login'
+
 				try{
 				var show_more = true;
 
+				$('.big_button').click(function(){
+					//TODO valdation
+					button=$(this);
+					instapaper_username=$('#iuser').val();
+					$.ajax({
+						type: "GET",
+						url: '/user/update',
+						data: "cookie="+instaright_cookie+"&instapaper_username="+instapaper_username,
+						cache: false,
+						success: function(data){
+							$('#agree').fadeIn('slow');
+							setTimeout(function(){ $('#agree').fadeOut();}, 2000);
+						}
+					})
+					return false;
+					
+
+				})
 				$('.remove_user_info').click(function(){
 					loc=$(this).attr('href')
-					try{
+					service=loc.replace('user','').replace('remove','').replace(/\//g,'');
+					link=$(this);
+					if (link.text() == 'Connect'){
+						return true;
+					}
 					$.ajax({
 						type: "GET",
 						url: loc,
 						data: "cookie="+instaright_cookie,
 						cache: false,
 						success: function(data){
-							$(this).text(data);
+							//$(link).slideToggle(400);
+							toggle_link=$(link).text() == 'Remove'? oauth_connect_link[service]:$(link).attr('href');
+							$(link).attr('href',toggle_link);
+							$(link).text(($(link).text() == 'Remove'?'Connect':'Remove'));
 						}
 					})
-					} catch(e){
-					alert(e);
-					}
 					return false;
 				})
 				$('.user_data').ajaxForm({
@@ -147,6 +176,27 @@
                 	</ul>
 		</div>
 	</div>	
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({appId: '180962951948062', status: true, cookie: true,
+                 xfbml: true});
+      };
+      (function() {
+        var e = document.createElement('script');
+        e.type = 'text/javascript';
+        e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+        e.async = true;
+        document.getElementById('fb-root').appendChild(e);
+      }());
+    </script>
+	<script>
+		function fblogin(){
+			FB.login(function(response){
+				window.location.reload();
+			}, {perms:'read_stream,publish_stream, email, offline_access'});
+		}
+	</script>
 	<div style="display: none;">
 		<div id="visualization" style="width: 400px; height: 200px;  display: inline-block;"></div>
 	</div>
@@ -159,36 +209,33 @@
 				    <h5><span>Services</span></h5>
 				    <div style="display: block">
 						<div class="account_field_column_left">
-			            			<label for="iuser" style="width: 100%">Instaright Account</label>
+			            			<label for="iuser" style="width: 100%">Instapaper Account</label>
 							<input type="text" name="iuser" id="iuser" class="required text_field" value="{{ instaright_account }}"/>
 						</div>
 						<div class="account_field_column_right">
-			            			<label for="ipass" style="width: 100%">Instaright Password</label>
-							<input type="password" name="ipass" class="text_field"/>
+							<span>Exactly, only instapaper username</span>
 						</div>
 						<br style="clear:both;"/>
 			    	    </div>
 			            <div class="account_field_label">Evernote Account</div>
 				    <div class="account_field">
-					    {% if evernote_profile %}
+					    {% if evernote_token %}
 					    	<div class="account_field_data"><img src="/static/images/evernote_small.png" />&nbsp;&nbsp;{{ evernote_profile }}</div>
 					    	<div class="profile_remove"><a class="remove_user_info" href="/user/evernote/remove">Remove</a></div>
 					    {% else %}
 					    	<div class="account_field_data"><img src="/static/images/evernote_small.png" />&nbsp;&nbsp;</div>
 					    	<div class="profile_remove"><a href="/oauth/evernote/login">Connect</a></div>
 					    {% endif %}
-					    <div class="profile_remove"><a href="/oauth/evernote/login">Update</a></div>
 				    	    <br style="clear:both;"/>
 				    </div>
 			            <div class="account_field_label">Picplz Account</div>
 				    <div class="account_field">
-					    {% if picplz_profile %}
+					    {% if picplz_token %}
 					    	<div class="account_field_data"><img src="/static/images/picplz_small.png" />&nbsp;&nbsp;{{ picplz_profile }}</div>
 					    	<div class="profile_remove"><a class="remove_user_info" href="/user/picplz/remove">Remove</a></div>
-					    	<div class="profile_remove"><a href="https://picplz.com/oauth2/authenticate?client_id=BnYEDMYMrqaKP7DYvQS55meeMHG6s2CA&response_type=code&redirect_uri=http%3A//www.instaright.com/oauth2/picplz/callback">Update</a></div>
 					    {% else %}
 					    	<div class="account_field_data"><img src="/static/images/picplz_small.png" />&nbsp;&nbsp;</div>
-					    	<div class="profile_remove"><a href="/oauth/picplz/login">Connect</a></div>
+					    	<div class="profile_remove"><a href="/oauth2/picplz/login">Connect</a></div>
 					    {% endif %}
 
 				    	    <br style="clear:both;"/>
@@ -196,20 +243,20 @@
 				    <h5><span>Identities</span></h5>
 			            <div class="account_field_label">Facebook Account</div>
 				    <div class="account_field">
-					    {% if facebook_profile %}
+					    {% if facebook_token %}
 					    	<div class="account_field_data"><img src="/static/images/facebook_small.png"/>&nbsp;&nbsp;{{ facebook_profile }}</div>
-					    	<div class="profile_remove"><a href="/user/facebook/remove">Remove</a></div>
+					    	<div class="profile_remove"><a class="remove_user_info" href="/user/facebook/remove">Remove</a></div>
 					    {% else %}
 					    	<div class="account_field_data"><img src="/static/images/facebook_small.png"/>&nbsp;&nbsp;</div>
-					    	<div class="profile_remove"><a href="/user/facebook/connect">Connect</a></div>
+					    	<div class="profile_remove"><a href="javascript:fblogin();">Connect</a></div>
 					    {% endif %}
 				    	    <br style="clear:both;"/>
 				    </div>
 			            <div class="account_field_label">Twitter Account</div>
 				    <div class="account_field">
-					    {% if twitter_profile %}
+					    {% if twitter_token %}
 					    	<div class="account_field_data"><img src="/static/images/twitter_small.png"/>&nbsp;&nbsp;{{ twitter_profile }}</div>
-					    	<div class="profile_remove"><a href="/user/twitter/remove">Remove</a></div>
+					    	<div class="profile_remove"><a class="remove_user_info" href="/user/twitter/remove">Remove</a></div>
 					    {% else %}
 					    	<div class="account_field_data"><img src="/static/images/twitter_small.png"/>&nbsp;&nbsp;</div>
 					    	<div class="profile_remove"><a href="/user/twitter/connect">Connect</a></div>
@@ -218,18 +265,18 @@
 				    </div>
 			            <div class="account_field_label">Google Account</div>
 				    <div class="account_field">
-					    {% if google_profile %}
+					    {% if google_token %}
 					    	<div class="account_field_data"><img src="/static/images/google_small.png" />&nbsp;&nbsp;{{ google_profile }}</div>
 					    	<div class="profile_remove"><a id="google" class="remove_user_info" href="/user/google/remove">Remove</a></div>
 					    {% else %}
 					    	<div class="account_field_data"><img src="/static/images/google_small.png" />&nbsp;&nbsp;</div>
-					    	<div class="profile_remove"><a href="/user/google/connect">Connect</a></div>
+					    	<div class="profile_remove"><a href="https://www.google.com/accounts/ServiceLogin?service=ah&passive=true&continue=https://appengine.google.com/_ah/conflogin%3Fcontinue%3Dhttp://www.instaright.com/&ltmpl=gm&shdf=CioLEgZhaG5hbWUaHkluc3RhcmlnaHQgU29jaWFsIEJvb2ttYXJrIGFwcAwSAmFoIhTE48qzG8DBDmHMiwb872gE6aMgLSgBMhSxq_6FfkBd9xImrOBLDCHK6sbOIg">Connect</a></div>
 					    {% endif %}
 				    	    <br style="clear:both;"/>
 				    </div>
 				    <br style="clear:both;"/>
 			            <div>
-			                <input type="submit" value="Save" class="big_button" />
+			                <input type="submit" value="Save" class="big_button" /><img id="agree" src="/static/images/agree.png" />
 			            </div>
 			       </form>
 			    </div>
