--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -114,6 +114,19 @@
 			</div>
 		</div>
 	</div>
+		<div class="line_separator" ></div>
+        	<div class="slogan">Instaright Bookmarklet</div>
+		<div class="import_delicious">
+			<p>User Instaright everywhere on the go!</p>
+			<p>iPhone, Android, Nokia browsers can use bookmarklet and send cool stories to the world!</p>
+		        <p>We haven't forgot Safari or Opera users, now you can use bookmarklet and boost your productivity.</p>
+			<p>
+			<span class="text_bubble_cats">
+			<a href="javascript:void((function(){var%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('src','http://localhost:8080/bookmarklet/javascript');document.body.appendChild(e)})())" title="Drag Instaright bookmarklet to your Bookmark Bar" onclick="javascript:alert('Click and drag the button above onto your Bookmark bar'); return false;">Instaright Bookmarklet</a>
+			</span>
+			</p>
+		</div>
+    </div>
 		<!--div class="line_separator" ></div>
         	<div class="slogan">Instaright importer - Import Delicious bookmarks into Instapaper</div>
 		<div class="import_delicious">
