--- a/backend/templates/user_info.html
+++ b/backend/templates/user_info.html
@@ -23,8 +23,7 @@
 		<script type="text/javascript" src="/static/javascript/jquery.fancybox-1.3.4.pack.js"></script>
                 <script type="text/javascript" src="/static/javascript/jquery.cookie.js"></script>
 		<link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-        	<script src="/static/javascript/jquery.form.js"></script>
-        	<script type="text/javascript" src="http://github.com/malsup/form/raw/master/jquery.form.js?v2.44"></script>
+        	<script type="text/javascript" src="/static/javascript/jquery.form.js"></script>
         	<link rel="stylesheet" type="text/css" href="/css/landing_form.css"/>
 		<script>
 			$(document).ready(function(){
@@ -95,8 +94,9 @@
 					return false;
 				});
 				$(".load_more_container").live("click", function(){
-					alert('Coming soon');
-					return;
+					var content = $("div .link_details_container:last");
+					var last_content_clone = $("div .link_details_container:last").clone();
+					var load_container = $(this);
 					var offset = $(this).attr("id");
 					var cookie = $.cookie("user_uuid");
 					if (!cookie){ 
@@ -114,22 +114,36 @@
 							var j = "";
 							try{
 								j = eval(data);
-								a = Array();
+								if (jQuery.isEmptyObject(j)){
+									if ($("#no_more_updates").length == 0){
+										$(load_container).append("<div id='no_more_updates'>No more updates</div>");
+									}
+									return;
+								}
 								for (p in j){
-									a.push(p);a.push('=>');
-									for (pp in j[p]){
-										a.push(pp);
-										a.push('==>');
-										a.push(j[p][pp][0]);
+									//dd = new Date(p);
+									//dd.toString('M d');
+									//console.log('for date' + dd + ' got ' + j[p].length + ' links');
+									for (i=0; i < j[p].length; i++){
+										title=j[p][i]['t'];
+										domain=j[p][i]['d'];
+										link=j[p][i]['l'];
+										new_elem=last_content_clone;
+										ico='http://'+domain+'/favicon.ico';
+										$(new_elem).find('a:first').attr('href', link);
+										$(new_elem).find('a:first').text(title);
+										$(new_elem).find('a:last').attr('href', link);
+										$(new_elem).find('a:last').text(link);
+										$(new_elem).find('img:last').attr('src',ico);
+										$(content).append(new_elem);
+										//console.log(new_elem);
+										last_content_clone = $("div .link_details_container:last").clone();
 									}
 								}
-								alert(a.join('\n'));
-							for (i=j.length -1; i>=0; i--){
-								alert('elem:'+j[i]);
-								$(this).append('<div>'+j[i]+'</div>');
-							}
+							offset = parseInt(offset) + 1;
+							$(load_container).attr('id', offset);
 							} catch(e){
-								alert('e:'+e);
+								alert('erro:'+e);
 							}
 						}
 					});
@@ -198,6 +212,7 @@
 		}
 	</script>
 	<div style="display: none;">
+		<div id="statsHeader" ></div>
 		<div id="visualization" style="width: 400px; height: 200px;  display: inline-block;"></div>
 	</div>
 	<div style="display: none;">
