--- a/backend/templates/user_info.html
+++ b/backend/templates/user_info.html
@@ -94,7 +94,6 @@
 					return false;
 				});
 				$(".load_more_container").live("click", function(){
-					var content = $("div .link_details_container:last");
 					var last_content_clone = $("div .link_details_container:last").clone();
 					var load_container = $(this);
 					var offset = $(this).attr("id");
@@ -121,13 +120,27 @@
 									return;
 								}
 								for (p in j){
-									//dd = new Date(p);
-									//dd.toString('M d');
-									//console.log('for date' + dd + ' got ' + j[p].length + ' links');
-									for (i=0; i < j[p].length; i++){
-										title=j[p][i]['t'];
-										domain=j[p][i]['d'];
-										link=j[p][i]['l'];
+									dd = new Date(j[p][0]);
+									dd_day=dd.getDate();
+									dd_month=getMonth3U_int(dd.getMonth());
+									console.log("::for date" + dd_month + " got " + j[p][1].length + " links");
+									date_group=dd_month + " " + dd_day
+									if ($(".date_group:last").text() != date_group){
+										console.log("date group " + date_group + " doesn't exists creating new date group");
+										link_group_clone=$(".link_group:last").clone();
+										$(link_group_clone).find(".date_group").text(date_group);
+										$(link_group_clone).find(".toggle_div").children().remove();
+										links=$('.links');
+										$(links).append(link_group_clone);
+
+									}
+									content = $("div .toggle_div:last");
+									links_for_date = j[p][1];
+									for (i=0; i < links_for_date.length; i++){
+										title=links_for_date[i]['t'];
+										domain=links_for_date[i]['d'];
+										link=links_for_date[i]['l'];
+										console.log('title:'+title+' domain:'+ domain+' link:'+ link)
 										new_elem=last_content_clone;
 										ico='http://'+domain+'/favicon.ico';
 										$(new_elem).find('a:first').attr('href', link);
@@ -136,7 +149,7 @@
 										$(new_elem).find('a:last').text(link);
 										$(new_elem).find('img:last').attr('src',ico);
 										$(content).append(new_elem);
-										//console.log(new_elem);
+										console.log(new_elem);
 										last_content_clone = $("div .link_details_container:last").clone();
 									}
 								}
@@ -372,7 +385,7 @@
 					<a class="date_group" href="#">{{ links.grouper }}</a>
 					<a class="show_toggle" href="#">Collapse</a>
 				</div>
-				<div id="toggle_div">
+				<div class="toggle_div">
                         
                         	{% for item in links.list %}
 				<div class="link_details_container">
