--- a/backend/templates/bookmarklet_frame.html
+++ b/backend/templates/bookmarklet_frame.html
@@ -52,30 +52,45 @@
 			</div>
 
 			<div id="logindiv" style="display:none">
-				<!--form action="/a/bookmarklet" method="post" target="_top" id="loginform"-->
-				<form action="/a/bookmarklet" method="post" id="loginform">
-					<div id="errormessage" style="margin-bottom:1em; display:none"></div>
-					<table class="form">
-						<tr>
-							<td class="label">Email or username</td>
-							<td class="value"><input name="email" id="email" type="text" size="25" value="" autocomplete="off"/></td>
-						</tr>
-						<tr>
-							<td class="label">Password</td>
-							<td class="value"><input name="password" id="password" type="password" size="25"/></td>
-						</tr>
-						<tr>
-							<td>&nbsp;</td>
-							<td class="buttons">
+				<div class="sharebox expanded" style="border-width:0px ;padding:30px; margin-left: 50px;">
+					<p class="howdy">Yee Haw! Claim your identity by logging at out website.</p>
+					<p class="howdy"><a target="_new" href="http://localhost:8080/user/dashboard">(login)</a></p>
+					<p class="howdy">*after login try again</p>
+					<table>
+						<tbody>
+							<tr>
+								<td><a href="/oauth/twitter/login?redirect=/bookmarklet/frame"><img style="boarder: medium none" width="80" height="80" title="Join Instaright Web App with your Twitter account" alt="Twitter" src="/static/images/twitter-button.png"/></a></td>
+								<td><a href="{{ google_login_url }}&redirect=/bookmarklet/frame"><img style="boarder: medium none" width="80" height="80" title="Join Instaright Web App with your Google account" alt="Google" src="/static/images/google-button.png"/></a></td>
+								<td>
+									<div id="fb-root"></div>
+									<script>
+										window.fbAsyncInit = function() {
+											FB.init({appId: '180962951948062', status: true, cookie: true,
+												xfbml: true});
+										};
+										(function() {
+											var e = document.createElement('script');
+											e.type = 'text/javascript';
+											e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+											e.async = true;
+											document.getElementById('fb-root').appendChild(e);
+										}());
+									</script>
+									<a href="javascript:fblogin();"> <img style="boarder: medium none" width="80" height="80" title="Join Instaright Web App with your Facebook account" alt="Facebook" src="/static/images/facebook-button.png" /> </a>
+									<script>
+										function fblogin(){
+											FB.login(function(response){
+												window.location.reload();
+											}, {perms:'read_stream,publish_stream, email, offline_access'});
+										}
+									</script>
+								</td>
+							</tbody>
+						</table>
 
-								<input name="remember" type="hidden" value="1"/>
-								<input type="submit" value="Sign in"/>
-								<!--span style="margin-left:5pt"><a href="http://friendfeed.com/account/create" target="_top">Create an account</a></span-->
-								<span style="margin-left:5pt"><a href="http://friendfeed.com/account/create">Create an account</a></span>
-							</td>
-						</tr>
-					</table>
-				</form>
+					</div>
+
+				</body>
 			</div>
 		</div>
 
@@ -92,29 +107,29 @@
 		var gHttpsPrefix = 'https://friendfeed.com';
 		var gRTL = false;
 		//]]>
-	</script>
+		</script>
 
-	<script src="/static/javascript/nano.en.js" type="text/javascript">
-	</script>
-	<script type="text/javascript">
-		//<![CDATA[
-	var gLastHash = "";
-	var gThumbnails = [];
-	var kThumbHeight = 150;
-	var kThumbWidth = 400;
-	var kMaxThumbnails = 3;
-	$(function() {
-			
-			var submit = function() { $("#bookmarkletform").submit() }
-			$("textarea.note").hint().makeExpandable(20000, submit).focus(shareFocus);
-			$("#bookmarkletform,#loginform").submit(bookmarkletSubmit); checkHash();
-			setInterval(checkHash, 100);
+		<script src="/static/javascript/nano.en.js" type="text/javascript">
+		</script>
+		<script type="text/javascript">
+			//<![CDATA[
+		var gLastHash = "";
+		var gThumbnails = [];
+		var kThumbHeight = 150;
+		var kThumbWidth = 400;
+		var kMaxThumbnails = 3;
+		$(function() {
+
+				var submit = function() { $("#bookmarkletform").submit() }
+				$("textarea.note").hint().makeExpandable(20000, submit).focus(shareFocus);
+				$("#bookmarkletform,#loginform").submit(bookmarkletSubmit); checkHash();
+				setInterval(checkHash, 100);
 
 
-			$('.sharebox .l_toinput').result(function() {setTimeout(updateFrameSize)});
-			$('.sharebox a.l_toinput').focus(shareToFocus).blur(shareToBlur);
+				$('.sharebox .l_toinput').result(function() {setTimeout(updateFrameSize)});
+				$('.sharebox a.l_toinput').focus(shareToFocus).blur(shareToBlur);
 
-			});
+				});
 function checkHash() {
 	var hash = location.href.split("#")[1]; // don't use location.hash
 	if (!hash || !hash.length) return;
@@ -128,13 +143,13 @@ function checkHash() {
 			break;
 			case "url":
 				$("input[name=url]").val(v);
-				$("input[name=link]").val(v);
-				$("input[name=url]").attr('disabled',true);
+			$("input[name=link]").val(v);
+			$("input[name=url]").attr('disabled',true);
 			break;
 			case "title":
 				$("input[name=title]").val(v);
-				$("input[name=link_title]").val(v);
-				$("input[name=title]").attr('disabled',true);
+			$("input[name=link_title]").val(v);
+			$("input[name=title]").attr('disabled',true);
 			break;
 			case "selection":
 				v = $.trim(v);
@@ -161,21 +176,19 @@ function parseParams(s) {
 		var kv = a[i].split("=");
 		r[decodeURIComponent(kv[0])] = decodeURIComponent(kv[1]);
 	}
-	console.log(r);
 	return r;
 }
 function bookmarkletSubmit() {
 	var form = $("#bookmarkletform");
 	var args = form.formToDict();
 	if (!args.link) {
-		console.log('bye bye');
 		return false;
 	}
 	var login = $("#loginform").formToDict();
 	if (login.email) {
 		$.extend(args, login);
 	} else {
-		if (!getCookie("user_uuid")) {
+		if (!getCookie("AD")) {
 			showLogin();
 			return false;
 		}
@@ -187,19 +200,18 @@ function bookmarkletSubmit() {
 	$.post("/rpc", {'data':json_instaright}, function(r) {
 			submit.enable();
 			if (r.loginreq) {
-				showLogin();
+			showLogin();
 			} else if (r.message) {
-				console.log('error message:' + r.message);
-				$("#errormessage").html(r.message).show();
-				showLogin();
+			$("#errormessage").html(r.message).show();
+			showLogin();
 			} else {
-				if (r.close_html) {
-					sendToParent("close-" + encodeURIComponent(r.close_html).replace(/-/g, '%2d'));
-				} else {
-					sendToParent("close");
-				}
+			if (r.close_html) {
+			sendToParent("close-" + encodeURIComponent(r.close_html).replace(/-/g, '%2d'));
+			} else {
+			sendToParent("close");
 			}
-		}, submit, true);
+			}
+			}, submit, true);
 	return false;
 }
 function showLogin() {
