--- a/backend/templates/bookmarklet_frame.html
+++ b/backend/templates/bookmarklet_frame.html
@@ -132,7 +132,9 @@ function sendToLoginPage(){
 	try {
 		top.location.replace(url);
 	} catch (e) {
-		console.log(e);
+		if (window.console && window.console.log) {
+			console.log(e);
+		}
 		top.location = url;
 	}
 }
